--- a/src/app/components/produit/produit.component.html
+++ b/src/app/components/produit/produit.component.html
@@ -1,3 +1,273 @@
-<p>
-  produit works!
-</p>
+
+
+
+<div class="b" style="padding-left:50px;">
+  <div class="navbar navbar navbar-fixed-top" style="padding-left: 175px;">
+    <div class="topNav">
+      <div class="container">
+        <div class="alignR">
+          <div class="pull-left socialNw">
+            <a href="#"><span class="icon-twitter"></span></a>
+            <a href="#"><span class="icon-facebook"></span></a>
+            <a href="#"><span class="icon-youtube"></span></a>
+            <a href="#"><span class="icon-tumblr"></span></a>
+          </div>
+          <a routerLink="../accueil"><span class="icon-home" style="font-size: 20px;">Accueil</span></a>
+          <a href="#"><span class="icon-user" style="font-size: 20px;">Mon compte</span></a>
+          <a href="#"><span class="icon-edit" style="font-size: 20px;">Inscription gratuite</span></a>
+          <a routerLink="../contact"><span class="icon-envelop" style="font-size: 20px;">Contact</span></a>
+          <a href="#"><span class="icon-shopping-cart" style="font-size: 20px;">2 produit</span></a>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--
+  Lower Header Section
+  -->
+  <div class="container" style="padding-left: 90px;">
+    <div id="gototop"> </div>
+
+    <!--
+    Body Section
+    -->
+    <div class="row" >
+      <div id="sidebar" class="span3">
+        <div class="well well-small">
+          <ul class="nav nav-list">
+
+            <li><a routerLink="../liste"><span class="icon-chevron-right"></span> Moteur</a></li><hr>
+
+
+          </ul>
+          <ul class="nav nav-list">
+
+            <li><a routerLink="../liste"><span class="icon-chevron-right"></span> Échappement</a></li><hr>
+
+
+          </ul>
+          <ul class="nav nav-list">
+
+            <li><a routerLink="../liste"><span class="icon-chevron-right"></span> Train roulant</a></li><hr>
+
+
+          </ul>
+          <ul class="nav nav-list">
+
+            <li><a routerLink="../liste"><span class="icon-chevron-right"></span> Éclairage</a></li><hr>
+
+
+          </ul>
+          <ul class="nav nav-list">
+
+            <li><a routerLink="../liste"><span class="icon-chevron-right"></span> Climatisation</a></li><hr>
+
+
+          </ul>
+          <ul class="nav nav-list">
+
+            <li><a routerLink="../liste"><span class="icon-chevron-right"></span> Chauffage/ventilation</a></li><hr>
+
+
+          </ul>
+          <ul class="nav nav-list">
+
+            <li><a routerLink="../liste"><span class="icon-chevron-right"></span>  Accessoir</a></li><hr>
+
+
+          </ul>
+
+        </div>
+
+        <div class="well well-small alert alert-warning cntr">
+          <h2>50% de réduction</h2>
+          <p>
+            <br><a class="defaultBtn" routerLink="liste" >cliquer içi </a>
+          </p>
+        </div>
+
+
+        <a class="shopBtn btn-block" routerLink="login">Nouveau article <br><small> cliquer içi</small></a>
+        <br>
+        <br>
+        <ul class="nav nav-list promowrapper">
+          <li>
+            <div class="thumbnail">
+              <a class="zoomTool" href="product_details.html" title="add to cart"><span class="icon-search"></span> voir detail</a>
+              <img src="../../assets/img1/a.jpg" alt="bootstrap ecommerce templates">
+              <div class="caption">
+                <h4><a  href="product_details.html">Prix</a> <span class="pull-right">$22.00</span></h4>
+              </div>
+            </div>
+          </li>
+
+
+        </ul>
+        <div class="span12">
+          <section class="our_client">
+            <hr class="soften"/>
+            <h4 class="title cntr"><span class="text">Manufactures</span></h4>
+            <hr class="soften"/>
+            <div class="row">
+              <div class="span2">
+                <a href="#"><img alt="" src="../../assets/img1/1.png"></a>
+              </div>
+              <div class="span2">
+                <a href="#"><img alt="" src="../../assets/img1/2.png"></a>
+              </div>
+              <div class="span2">
+                <a href="#"><img alt="" src="../../assets/img1/3.png"></a>
+              </div>
+              <div class="span2">
+                <a href="#"><img alt="" src="../../assets/img1/4.png"></a>
+              </div>
+              <div class="span2">
+                <a href="#"><img alt="" src="../../assets/img1/5.png"></a>
+              </div>
+              <div class="span2">
+                <a href="#"><img alt="" src="../../assets/img1/6.png"></a>
+              </div>
+            </div>
+          </section>
+
+          <!--
+          Footer
+          -->
+          <footer class="footer" style="padding-right: 50px;">
+            <div class="row-fluid">
+              <div class="span2">
+                <h5>Vot</h5>
+                <a href="#">YOUR ACCOUNT</a><br>
+                <a href="#">PERSONAL INFORMATION</a><br>
+                <a href="#">ADDRESSES</a><br>
+                <a href="#">DISCOUNT</a><br>
+                <a href="#">ORDER HISTORY</a><br>
+              </div>
+              <div class="span2">
+                <h5>Iinformation</h5>
+                <a href="contact.html">CONTACT</a><br>
+                <a href="#">SITEMAP</a><br>
+                <a href="#">LEGAL NOTICE</a><br>
+                <a href="#">TERMS AND CONDITIONS</a><br>
+                <a href="#">ABOUT US</a><br>
+              </div>
+              <div class="span2">
+                <h5>Our Offer</h5>
+                <a href="#">NEW PRODUCTS</a> <br>
+                <a href="#">TOP SELLERS</a><br>
+                <a href="#">SPECIALS</a><br>
+                <a href="#">MANUFACTURERS</a><br>
+                <a href="#">SUPPLIERS</a> <br/>
+              </div>
+              <div class="span6">
+                <h5>The standard chunk of Lorem</h5>
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for
+                those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et
+                Malorum" by Cicero are also reproduced in their exact original form,
+                accompanied by English versions from the 1914 translation by H. Rackham.
+              </div>
+            </div>
+          </footer>
+        </div>
+      </div>
+      <div class="span9">
+        <ul class="breadcrumb">
+          <li><a href="index.html">Home</a> <span class="divider">/</span></li>
+          <li><a href="products.html">Items</a> <span class="divider">/</span></li>
+          <li class="active">Preview</li>
+        </ul>
+        <div class="well well-small">
+          <div class="row-fluid">
+            <div class="span5">
+              <div id="myCarousel" class="carousel slide cntr">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <a href="#"> <img src="../../assets/img1/a.jpg" alt="" style="width:100%"></a>
+                  </div>
+                  <div class="item">
+                    <a href="#"> <img src="../../assets/img1/b.jpg" alt="" style="width:100%"></a>
+                  </div>
+                  <div class="item">
+                    <a href="#"> <img src="../../assets/img1/e.jpg" alt="" style="width:100%"></a>
+                  </div>
+                </div>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+              </div>
+            </div>
+            <div class="span7">
+              <h3>Nom du produit [$140.00]</h3>
+              <hr class="soft"/>
+
+              <form class="form-horizontal qtyFrm">
+                <div class="control-group">
+                  <label class="control-label"><span>$140.00</span></label>
+                  <div class="controls">
+                    <input type="number" class="span6" placeholder="Qty.">
+                  </div>
+                </div>
+
+                <div class="control-group">
+                  <label class="control-label"><span>Couleur</span></label>
+                  <div class="controls">
+                    <select class="span11">
+                      <option>Rouge</option>
+                      <option>mauve</option>
+                      <option>Rose</option>
+                      <option>orange</option>
+                    </select>
+                  </div>
+                </div>
+
+                <h4>nom</h4>
+                <p>Description de l'article
+                <p>
+                  <button type="submit" class="shopBtn"><span class=" icon-shopping-cart"></span> Ajouter au panier</button>
+              </form>
+            </div>
+          </div>
+          <hr class="softn clr"/>
+
+
+          <ul id="productDetail" class="nav nav-tabs">
+            <li class="active"><a href="#home" data-toggle="tab">Product Details</a></li>
+          </ul>
+
+
+          <table class="table table-striped">
+            <tbody>
+            <tr class="techSpecRow"><td class="techSpecTD1">Color:</td><td class="techSpecTD2">Black</td></tr>
+            <tr class="techSpecRow"><td class="techSpecTD1">Style:</td><td class="techSpecTD2">Apparel,Sports</td></tr>
+            <tr class="techSpecRow"><td class="techSpecTD1">Season:</td><td class="techSpecTD2">spring/summer</td></tr>
+            <tr class="techSpecRow"><td class="techSpecTD1">Usage:</td><td class="techSpecTD2">fitness</td></tr>
+            <tr class="techSpecRow"><td class="techSpecTD1">Sport:</td><td class="techSpecTD2">122855031</td></tr>
+            <tr class="techSpecRow"><td class="techSpecTD1">Brand:</td><td class="techSpecTD2">Shock Absorber</td></tr>
+            </tbody>
+          </table>
+
+        </div>
+
+        <!--
+        Clients
+        -->
+
+      </div><!-- /container -->
+
+
+    </div>
+    <script>
+      var video = document.getElementById("myVideo");
+      var btn = document.getElementById("myBtn");
+
+      function myFunction() {
+        if (video.paused) {
+          video.play();
+          btn.innerHTML = "Pause";
+        } else {
+          video.pause();
+          btn.innerHTML = "Play";
+        }
+      }
+    </script>
+
