--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
         <br>
 
         <div class="container-login100-form-btn">
-          <button class="login100-form-btn" (click)="login(login)" >
+          <button class="login100-form-btn" (click)="login(login)" [disabled]="rForm.invalid" >
             Sign in
           </button>
         </div>
@@ -32,8 +32,8 @@
 							Don’t have an account?
 						</span>
 
-          <a href="#" class="txt3">
-            Sign up now
+          <a  routerLink="/inscria" class="txt3">
+          Sign up now
           </a>
         </div>
       </form>
