--- a/src/app/components/liste/liste.component.html
+++ b/src/app/components/liste/liste.component.html
@@ -14,6 +14,9 @@
           <a href="#"><span class="icon-edit" style="font-size: 20px;">Inscription gratuite</span></a>
           <a routerLink="../contact"><span class="icon-envelop" style="font-size: 20px;">Contact</span></a>
           <a href="#"><span class="icon-shopping-cart" style="font-size: 20px;">2 produit</span></a>
+          <a (click)="deconnexion()"><span class="icon-shopping-cart" style="font-size: 20px;">deconnexion</span></a>
+
+          <a href="#" style="color: #0f9d58">utilisateur courant :{{nom}}</a>
 
 
         </div>
