--- a/src/app/components/from-art/from-art.component.html
+++ b/src/app/components/from-art/from-art.component.html
@@ -45,8 +45,8 @@
         </div>
       </li>
       <li class="nav-item dropdown no-arrow">
-        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-user-circle fa-fw"></i>
+        <a class="nav-link dropdown-toggle" (click)="deconnexion()"  id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          se deconnecter
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
           <a class="dropdown-item" href="#">Settings</a>
@@ -184,10 +184,10 @@
         <div class="form-group" style="padding-left: 40px;">
           <label for="lname" class="col-sm-1 control-label">qantité article </label>
           <div class="col-sm-11">
-            <input formControlName="quantite" type="number" id="quantite" placeholder="quantité article" class="input100" name= "email"  [(ngModel)]="article.qte_article">
+            <input formControlName="qte_article" type="number" id="qte_article" placeholder="quantité article" class="input100" name= "email"  [(ngModel)]="article.qte_article">
           </div>
         </div>
-        <div class="alert alert-danger" *ngIf="!rForm.controls['quantite'].valid && rForm.controls['quantite'].touched">veuiller saisir votre adresse mail</div>
+        <div class="alert alert-danger" *ngIf="!rForm.controls['qte_article'].valid && rForm.controls['qte_article'].touched">veuiller saisir votre adresse mail</div>
 
         <div class="form group"  style="padding-left: 40px;">
           <label for="lname" class="col-sm-1 control-label">numéro du fournisseur</label>
