--- a/src/app/components/lister-panier/lister-panier.component.html
+++ b/src/app/components/lister-panier/lister-panier.component.html
@@ -43,8 +43,8 @@
         </div>
       </li>
       <li class="nav-item dropdown no-arrow">
-        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-user-circle fa-fw"></i>
+        <a class="nav-link dropdown-toggle" (click)="deconnexion()"  id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          se deconnecter
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
           <a class="dropdown-item" href="#">Settings</a>
@@ -201,7 +201,7 @@
                 <td>{{f.prix_article}}</td>
                 <td>{{f.nom_article}}</td>
 
-                <td><button class="btn btn-danger" (click)="deleteArticle(f)">Delete</button> </td>
+                <td><button (click)="deleteArticle(f)">Delete</button> </td>
               </tr>
 
               </tbody>
