--- a/src/app/components/listpayment/listpayment.component.html
+++ b/src/app/components/listpayment/listpayment.component.html
@@ -40,8 +40,8 @@
       </div>
     </li>
     <li class="nav-item dropdown no-arrow">
-      <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="fas fa-user-circle fa-fw"></i>
+      <a class="nav-link dropdown-toggle" (click)="deconnexion()"  id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        se deconnecter
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
         <a class="dropdown-item" href="#">Settings</a>
